fix: more gap between dropdown columns

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -124,6 +124,8 @@
 .dropdownInnerCols {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 4px;
+  column-gap: 20px;
 }
 
 .dropdownItem {
